[package]
name = "actixwebtaskservice"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "^4"
uuid = { version = "1.0", features = ["serde"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "1.0"
aws-config = "^0.8"
aws-sdk-dynamodb = "^0.8"
env_logger = "0.8"
log = "^0.4"
strum_macros = "^0.24"
strum = { version = "^0.24", features = ["derive"] }
derive_more = "^0.99"
sqlx = { version = "0.6", features = ["postgres","uuid", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
actix-rt = "2.5.0"
dotenv = "0.15"

