[package]
name = "actixwebtaskservice"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "^4"
uuid = { version = "1.0", features = ["serde"] }
serde = { version = "^1", features = ["derive"] }
env_logger = "0.8"
sqlx = { version = "0.6", features = ["postgres","uuid", "runtime-tokio-rustls"] }
dotenv = "0.15"

